--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Skonhetsakuten. Beauty saloon in Sweden and Norway Oslo. Beaty treatments"
+    <meta name="keywords" content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading"
+
+    <!--Title-->
     <title>Skonhetsakuten</title>
 
     <!--Favicon-->
