--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!--Meta tags for search engines-->
     <meta name="description" content="Skonhetsakuten. Beauty saloon in Sweden and Norway Oslo. Beaty treatments"
     <meta name="keywords" content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading"
@@ -14,6 +14,9 @@
 
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
