Fix header in body section in html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <section class="heder">
+    <section class="header">
 
-        
+
     </section>
     
 </body>
