Add logo to the page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <section class="header">
+        <nav>
+            <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
+        </nav>
 
 
     </section>
