Add nav list under the logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="assets/images/logo.png"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href=""</a>HOME</li>
+                    <li><a href=""</a>ABOUT</li>
+                    <li><a href=""</a>TREATMENTS</li>
+                    <li><a href=""</a>CONTACT</li>
+                </ul>
+            </div>
         </nav>
 
 
