--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="assets/images/logo.png"></a>
+            <img src="assets/images/logo.png">
             <div class="nav-links">
                 <ul>
                     <li><a href=""</a>HOME</li>
