--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <img src="assets/images/logo.png">
             <div class="nav-links">
                 <ul>
-                    <li><a href=""</a>HOME</li>
-                    <li><a href=""</a>ABOUT</li>
-                    <li><a href=""</a>TREATMENTS</li>
-                    <li><a href=""</a>CONTACT</li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">TREATMENTS</a></li>
+                    <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
