Add font style Prompt and add the font size source

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Meta tags for search engines-->
-    <meta name="description" content="Skonhetsakuten. Beauty saloon in Sweden and Norway Oslo. Beaty treatments"
-    <meta name="keywords" content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading"
-
-    <!--Title-->
+    <meta name="description" content="Skonhetsakuten. Beauty saloon in Sweden and Norway Oslo. Beaty treatments" <meta
+        name="keywords"
+        content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading"
+        <!--Title-->
     <title>Skonhetsakuten</title>
 
     <!--Favicon-->
@@ -17,6 +18,10 @@
 
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -35,6 +40,7 @@
 
 
     </section>
-    
+
 </body>
+
 </html>
