Add h1 and p element for the page that welcomes the visitor

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
                 </ul>
             </div>
         </nav>
-
+<div class="text-box">
+    <h1>Welcome to Skonhetsakuten</h1>
+    <p>Swedens most popular beauty salon</p>
+    <a href="">Book your treatments today</a>
+</div>
 
     </section>
 
