Change text in text-box

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
 <div class="text-box">
     <h1>Welcome to Skonhetsakuten</h1>
-    <p>Swedens most popular beauty salon</p>
+    <p>Most popular beauty salon in Sweden</p>
     <a href="">Book your treatments today</a>
 </div>
 
