Add button and style it so it fits the theme. Add cursor when hover over

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <div class="text-box">
     <h1>Welcome to Skonhetsakuten</h1>
     <p>Most popular beauty salon in Sweden</p>
-    <a href="">Book your treatments today</a>
+    <!--Add link to bookadirek-->
+    <a href="" class="button1">Book your treatments today</a>
 </div>
 
     </section>
