Add link to the booking button

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <div class="text-box">
     <h1>Welcome to Skonhetsakuten</h1>
     <p>Most popular beauty salon in Sweden</p>
-    <!--Add link to bookadirek-->
-    <a href="" class="button1">Book your treatments today</a>
+    <!--Add link open in new tab-->
+    <a href="https://www.bokadirekt.se/" class="button1">Book your treatments today</a>
 </div>
 
     </section>
