--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h1>Welcome to Skonhetsakuten</h1>
     <p>Most popular beauty salon in Sweden</p>
     <!--Add link open in new tab-->
-    <a href="https://www.bokadirekt.se/" class="button1">Book your treatments today</a>
+    <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your treatments today</a>
 </div>
 
     </section>
