Add the max width for the tablets or higher

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 
 <body>
@@ -28,6 +29,7 @@
         <nav>
             <img src="assets/images/logo.png">
             <div class="nav-links">
+                <i class="fa fa-times-circle-o"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -35,6 +37,7 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="fa fa-bars"></i>
         </nav>
 <div class="text-box">
     <h1>Welcome to Skonhetsakuten</h1>
