--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
     </section>
-
+    <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
