--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section class="header">
         <nav>
             <img src="assets/images/logo.png">
-            <div class="nav-links">
-                <i class="fa fa-times-circle-o"></i>
+            <div class="nav-links" id="navLinks">
+                <i class="fa fa-times-circle-o" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -37,7 +37,7 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa fa-bars"></i>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 <div class="text-box">
     <h1>Welcome to Skonhetsakuten</h1>
@@ -47,6 +47,16 @@
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
+    <script>
+        var navLinks = document.getElementById("navLinks");
+        function showMenu(){
+            navLinks.style.right = "0";
+        }
+        function hideMenu(){
+            navLinks.style.right = "-200px";
+        }
+
+    </script>
 </body>
 
 </html>
