--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         }
 
     </script>
+
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a></li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener" aria-label="Visit our TikTok page (opens in a new tab)">Tiktok</a></li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener" aria-label="Visit our Bokadirekt page (opens in a new tab)">Bokadirekt</a></li>
+        </ul>
+    </footer>
+
+    
 </body>
 
 </html>
