Add icons for footer, add instagram and tiktok icons

--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 
     <footer>
         <ul>
-            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a></li>
-            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener" aria-label="Visit our TikTok page (opens in a new tab)">Tiktok</a></li>
-            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener" aria-label="Visit our Bokadirekt page (opens in a new tab)">Bokadirekt</a></li>
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener" aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener" aria-label="Visit our Bokadirekt page (opens in a new tab)">bokadirekt</a></li>
         </ul>
     </footer>
 
-    
 </body>
 
 </html>
