Align the icons in a center of the footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <!--Meta tags for search engines-->
     <meta name="description" content="Skonhetsakuten. Beauty saloon in Sweden and Norway Oslo. Beaty treatments">
-    <meta name="keywords" content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading">
-        <!--Title-->
+    <meta name="keywords"
+        content="skonhetsakuten, skonhet, beaty saloon, beauty treatment, Sweden, Vasteras, lashes, microblading">
+    <!--Title-->
     <title>Skonhetsakuten</title>
 
     <!--Favicon-->
@@ -21,7 +22,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 
 <body>
@@ -39,30 +41,38 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-<div class="text-box">
-    <h1>Welcome to Skonhetsakuten</h1>
-    <p>Most popular beauty salon in Sweden</p>
-    <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your treatments today</a>
-</div>
+        <div class="text-box">
+            <h1>Welcome to Skonhetsakuten</h1>
+            <p>Most popular beauty salon in Sweden</p>
+            <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
+                treatments today</a>
+        </div>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
     <script>
         var navLinks = document.getElementById("navLinks");
-        function showMenu(){
+        function showMenu() {
             navLinks.style.right = "0";
         }
-        function hideMenu(){
+        function hideMenu() {
             navLinks.style.right = "-200px";
         }
 
     </script>
 
     <footer>
-        <ul>
-            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener" aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener" aria-label="Visit our Bokadirekt page (opens in a new tab)">bokadirekt</a></li>
+        <ul id="social-networks">
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
+                    aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
+                    aria-label="Visit our Bokadirekt page (opens in a new tab)">bokadirekt</a>
+            </li>
         </ul>
     </footer>
 
