Add icon to bokadirekt, make spacing between the icons and make them bigger, change backgroundcolor to grey

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
             </li>
             <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
-                    aria-label="Visit our Bokadirekt page (opens in a new tab)">bokadirekt</a>
+                    aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
             </li>
         </ul>
     </footer>
