Add about, contact, treatments html.

--- a/about.html
+++ b/about.html
@@ -33,20 +33,15 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle-o" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="treatments.html">TREATMENTS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">TREATMENTS</a></li>
+                    <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-            <h1>Welcome to Skonhetsakuten</h1>
-            <p>Most popular beauty salon in Sweden</p>
-            <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
-                treatments today</a>
-        </div>
+        <h1>About Us</h1>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
