Fix the mission letter in h1 and change the background picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>Welcome to Skonhetsakuten</h1>
+            <h1>Welcome to Skönhetsakuten</h1>
             <p>Most popular beauty salon in Sweden</p>
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
