Add padding to nav closing icon so its paralell with the banner and the burger icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <nav>
             <img src="assets/images/logo.png">
             <div class="nav-links" id="navLinks">
-                <i class="fa fa-times-circle-o" onclick="hideMenu()"></i>
+                <i class="fa fa-times-circle-o" onclick="hideMenu()" aria-hidden="true" style="
+        padding-top: 8px;
+                    "></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
