Add h3 paragraf to footer, center it

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     </script>
 
     <footer>
+        <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
         <ul id="social-networks">
+        
             <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-instagram"></i></a>
