Add a copyright text bottom of footer

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                     aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
             </li>
         </ul>
+        <div class="footerBottom">
+            <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+
+        </div>
     </footer>
 
 </body>
