--- a/about.html
+++ b/about.html
@@ -59,20 +59,26 @@
 
     </script>
 
-    <footer>
-        <ul id="social-networks">
-            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
-                    aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
-            </li>
-            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
-                    aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
-            </li>
-        </ul>
-    </footer>
+<footer>
+    <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
+    <ul id="social-networks">
+    
+        <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i
+                    class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
+                aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+        </li>
+        <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
+                aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
+        </li>
+    </ul>
+    <div class="footerBottom">
+        <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+
+    </div>
+</footer>
 
 </body>
 
