Add a alternative text for logo if not loaded

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <section class="header">
         <nav>
-            <img src="assets/images/logo.png">
+            <img src="assets/images/logo.png" alt="logo">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle-o" onclick="hideMenu()" aria-hidden="true" style="
         padding-top: 8px;
