Center and narrow the paragraph in About us page so its easier to read

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body>
     <section class="header">
         <nav>
-            <img src="assets/images/logo.png">
+            <img src="assets/images/logo.png" alt="logo">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle-o" onclick="hideMenu()"></i>
                 <ul>
@@ -42,8 +42,10 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>ABOUT US</h1>
-            <p></p>
+            <h3>ABOUT US</h3>
+            <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your preferences.
+                These are performed by authorized and professional practitioners who care about you as a customer during the treatment and afterward as well.
+                Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
         </div>
 
     </section>
