--- a/about.html
+++ b/about.html
@@ -46,7 +46,16 @@
             <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your preferences.
                 These are performed by authorized and professional practitioners who care about you as a customer during the treatment and afterward as well.
                 Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
+                <!--Utube Video-->
+        <div class="container">
+            <iframe width="380" height="480" src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
         </div>
+        </div>
+
+        
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
