Move the video to the right of the display, add a border and border-radius

--- a/about.html
+++ b/about.html
@@ -46,9 +46,10 @@
             <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your preferences.
                 These are performed by authorized and professional practitioners who care about you as a customer during the treatment and afterward as well.
                 Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
+
                 <!--Utube Video-->
         <div class="container">
-            <iframe width="380" height="480" src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten"
+            <iframe style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;" width="370px" height="460px" src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
