Add new paragraph in About section, more information about practitioner

--- a/about.html
+++ b/about.html
@@ -43,20 +43,31 @@
         </nav>
         <div class="text-box">
             <h3>ABOUT US</h3>
-            <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your preferences.
-                These are performed by authorized and professional practitioners who care about you as a customer during the treatment and afterward as well.
+            <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your
+                preferences.
+                These are performed by authorized and professional practitioners who care about you as a customer during
+                the treatment and afterward as well.
                 Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
 
-                <!--Utube Video-->
-        <div class="container">
-            <iframe style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;" width="370px" height="460px" src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        </div>
+            <p>Those of you who visit us can feel safe knowing that we are taking recommended measures regarding the
+                coronavirus
+                COVID-19.Our skilled beauty practitioners have over 5 years of experience and hold qualifications in
+                various specialized areas,
+                including lashes, laser treatments, microblading, and more. Rest assured that you're in the capable
+                hands of experts
+                when you visit us for your beauty needs.
+            </p>
+
+            <!--Utube Video-->
+            <div class="container">
+                <iframe style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;" width="370px" height="460px"
+                    src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </div>
 
-        
+
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
@@ -71,26 +82,26 @@
 
     </script>
 
-<footer>
-    <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
-    <ul id="social-networks">
-    
-        <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)"><i
-                    class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
-                aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
-        </li>
-        <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
-                aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
-        </li>
-    </ul>
-    <div class="footerBottom">
-        <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+    <footer>
+        <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
+        <ul id="social-networks">
 
-    </div>
-</footer>
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
+                    aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
+                    aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
+            </li>
+        </ul>
+        <div class="footerBottom">
+            <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+
+        </div>
+    </footer>
 
 </body>
 
