--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,16 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>CONTACT</h1>
+            <h3>CONTACT</h3>
+            <p>
+                <strong>Adress:</strong>
+                <br>Emausgatan 37E
+                <br>Västerås, 72221
+            </p>
+            <p>
+                <strong>Phone:</strong>
+                <br>+46704665166
+            </p>
             <p></p>
         </div>
 
