Add map for the adress to the Contact page

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,10 @@
                 <strong>Phone:</strong>
                 <br>+46704665166
             </p>
-            <p></p>
+            <p><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2017.4694640353082!2d16.543563077849907!3d59.62519288730237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465e61eff9a64011%3A0xae80e2eee8e8ce78!2sSk%C3%B6nhetsakuten!5e0!3m2!1ssv!2sse!4v1697202520499!5m2!1ssv!2sse"
+                    width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></p>
         </div>
 
     </section>
@@ -68,26 +71,26 @@
 
     </script>
 
-<footer>
-    <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
-    <ul id="social-networks">
-    
-        <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)"><i
-                    class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
-                aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
-        </li>
-        <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
-                aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
-        </li>
-    </ul>
-    <div class="footerBottom">
-        <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+    <footer>
+        <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
+        <ul id="social-networks">
 
-    </div>
-</footer>
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
+                    aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
+                    aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
+            </li>
+        </ul>
+        <div class="footerBottom">
+            <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+
+        </div>
+    </footer>
 
 </body>
 
