--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,9 @@
                 <strong>Phone:</strong>
                 <br>+46704665166
             </p>
-            <div class="map"><iframe style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2017.4694640353082!2d16.543563077849907!3d59.62519288730237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465e61eff9a64011%3A0xae80e2eee8e8ce78!2sSk%C3%B6nhetsakuten!5e0!3m2!1ssv!2sse!4v1697202520499!5m2!1ssv!2sse"
-                    width="500" height="400" style="border:0;"allowfullscreen="" loading="lazy"
+            <div class="map"><iframe style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2017.4694640353082!2d16.543563077849907!3d59.62519288730237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465e61eff9a64011%3A0xae80e2eee8e8ce78!2sSk%C3%B6nhetsakuten!5e0!3m2!1ssv!2sse!4v1697202520499!5m2!1ssv!2sse"
+                    width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
 
