--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <!--Navigationbar-->
     <section class="header">
         <nav>
             <img src="assets/images/logo.png" alt="logo">
