--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <!--Navigationbar-->
     <section class="header">
         <nav>
             <img src="assets/images/logo.png" alt="logo">
