Add Mailing list to html, a h3 and a paragraf. Align text in css to center

--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,12 @@
                     width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
+<br>
+        <!--Mailing List-->
+        <div class="mail-list">
+            <h3>Ask Us Anything</h3>
+            <p>Get in touch and ask us anything about our treatments and we will get back to you as soon as possible</p>
+        </div>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
