Add a form section in html and add Name data with a table row

--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,16 @@
             <h3>Ask Us Anything</h3>
             <p>Get in touch and ask us anything about our treatments and we will get back to you as soon as possible</p>
         </div>
+        <!--Form-->
+        <form class="form">
+            <table>
+                <tr>
+                    <td>Name:</td>
+                    <td><input type="text"</td>
+                </tr>
+            </table>
+
+        </form>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
