Add Email data and add placeholder inside both Name and Email table row

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,11 @@
             <table>
                 <tr>
                     <td>Name:</td>
-                    <td><input type="text"</td>
+                    <td><input type="text" placeholder="Name"</td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input type="mail" placeholder="Email"</td>
                 </tr>
             </table>
 
