--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
         <!--Form-->
         <form class="form">
             <label for="_name">Name</label>
-            <input type="text" name="_name" id="_name" class="text-input" required>
+            <input type="text" name="_name" id="_name" class="text-input" placeholder="Name" required>
             <br>
             <label for="email_address">Email Address</label>
-            <input type="email" name="email_address" id="email_address" class="text-input" required>
+            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email" required>
 
         </form>
 
