--- a/contact.html
+++ b/contact.html
@@ -69,11 +69,13 @@
 
         <!--Form-->
         <form class="form">
-            <label for="_name">Name</label>
+            <label for="_name"></label>
             <input type="text" name="_name" id="_name" class="text-input" placeholder="Name" required>
             <br>
-            <label for="email_address">Email Address</label>
-            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email" required>
+            <label for="email_address"></label>
+            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email Adress" required>
+            <br>
+            <textarea name="message" id="message" placeholder="Write Me Anything..." cols="30" rows="10"></textarea>
 
         </form>
 
