--- a/contact.html
+++ b/contact.html
@@ -70,12 +70,14 @@
         <!--Form-->
         <form class="form">
             <label for="_name"></label>
-            <input type="text" name="_name" id="_name" class="text-input" placeholder="Name" required>
+            <input type="text" name="_name" id="_name" class="text-input" placeholder="Name (required)" required>
             <br>
             <label for="email_address"></label>
-            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email Adress" required>
+            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email Adress (required)" required>
             <br>
             <textarea name="message" id="message" placeholder="Write Me Anything..." cols="30" rows="10"></textarea>
+            <br>
+            <button type="submit" class="send-button">Send</button>
 
         </form>
 
