Add margin to form in css and set it to 40% so it is centered. Add text centered to both Name and Mail so it looks better

--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
         <!--Form-->
         <form class="form">
             <label for="_name"></label>
-            <input type="text" name="_name" id="_name" class="text-input" placeholder="Name (required)" required>
+            <input type="text" name="_name" id="_name" class="text-input" placeholder="Name (required)" style="text-align:center;" required>
             <br>
             <label for="email_address"></label>
-            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email Adress (required)" required>
+            <input type="email" name="email_address" id="email_address" class="text-input" placeholder="Email Adress (required)" style="text-align:center;" required>
             <br>
             <textarea name="message" id="message" placeholder="Write Me Anything..." cols="30" rows="10"></textarea>
             <br>
