Add pictures to index front page, add source so the images appear. Give them a alternative name

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
         </div>
+        <br>
+
+        <!--Pictures-->
+    <div class="pic-container">
+        <img src="assets/images/lashes.jpg" alt="lashes">
+        <img src="assets/images/micro" alt="microneedling">
+        <img src="assets/images/microblading" alt="microblading">
+        <img src="assets/images/teeth" alt="teeth-whitening">
+        <img src="assets/images/salon" alt="salon">
+        <img src="assets/images/inside.jpg" alt="inside">
+    </div>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
