Add jpg to the images so they all appear in browser

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <!--Pictures-->
     <div class="pic-container">
         <img src="assets/images/lashes.jpg" alt="lashes">
-        <img src="assets/images/micro" alt="microneedling">
-        <img src="assets/images/microblading" alt="microblading">
-        <img src="assets/images/teeth" alt="teeth-whitening">
-        <img src="assets/images/salon" alt="salon">
+        <img src="assets/images/micro.JPG" alt="microneedling">
+        <img src="assets/images/microblading.JPG" alt="microblading">
+        <img src="assets/images/teeth.JPG" alt="teeth-whitening">
+        <img src="assets/images/salon.jpg" alt="salon">
         <img src="assets/images/inside.jpg" alt="inside">
     </div>
 
