Add treatments class and add the treatments, make the background color red to make it easier to see the spacing between the text

--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@
 
     </script>
 
+<!--Footer-->
     <footer>
         <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
         <ul id="social-networks">
