--- a/treatments.html
+++ b/treatments.html
@@ -41,9 +41,25 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-            <h3>TREATMENTS</h3>
-            <p></p>
+        <div class="treatments">
+            <h3>TREATMENTS</h3> <br>
+            <p>Mix-lashes	700 kr</p>
+            <br>
+            <p>Volume lashes	655 kr</p>
+            <br>
+            <p>Brown Volume/Mix Lashes	799 kr</p>
+            <br>
+            <p>Eyebrow plucking	150 kr</p>
+            <br>
+            <p>Hair removal - 5 areas		7000 kr</p>
+            <br>
+            <p>Hair removal - Brazillian/Hollywood	4000 kr</p>
+            <br>
+            <p>Hair removal Full body	2999 kr</p>
+            <br>
+            <p>Teethwhitening	1195 kr</p>
+            <br>
+            <p>Microblading	3000 kr</p>
         </div>
 
     </section>
