--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="text-box">
             <h1>Welcome to Skönhetsakuten</h1>
             <p>Most popular beauty salon in Sweden</p>
+            <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
         </div>
