--- a/treatments.html
+++ b/treatments.html
@@ -41,8 +41,12 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
+        <!--Treatments-->
         <div class="treatments">
             <h3>TREATMENTS</h3> <br>
+            <!--Button-->
+            <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
+                treatments today</a>
             <p>Mix-lashes	700 kr</p>
             <br>
             <p>Volume lashes	655 kr</p>
@@ -60,6 +64,7 @@
             <p>Teethwhitening	1195 kr</p>
             <br>
             <p>Microblading	3000 kr</p>
+            <br>
         </div>
 
     </section>
