Give the company name a h1 so it appears bigger and give it spacing of 1 em

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>Welcome to Skönhetsakuten</h1>
+            <h2>Welcome to</h2>
+            <h1 style="letter-spacing: 1em;" >Skönhetsakuten</h1>
             <p>Most popular beauty salon in Sweden</p>
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
