Add padding 1 rem to social networks so the top is spaced a bit moore

--- a/treatments.html
+++ b/treatments.html
@@ -65,6 +65,7 @@
             <p>Teethwhitening	1195 kr</p>
             <br>
             <p>Microblading	3000 kr</p>
+            <p>hello</p>
             <br>
         </div>
 
