Add margin bottom to button1 and text-box for more spacing between and better look

--- a/about.html
+++ b/about.html
@@ -16,13 +16,15 @@
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 
-    <!--Stylesheet-->    
+    <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap"rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
-        
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+
 </head>
 
 <body>
@@ -60,8 +62,9 @@
 
             <!--Utube Video-->
             <div class="container">
-                <iframe class="utubevideo-container" style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;" width="370px" height="480px"
-                    src="https://www.youtube.com/embed/JIi88w0VGzM" title="Lashes by Skönhetsakuten" frameborder="0"
+                <iframe class="utubevideo-container" style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;"
+                    width="370px" height="480px" src="https://www.youtube.com/embed/JIi88w0VGzM"
+                    title="Lashes by Skönhetsakuten" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
@@ -83,7 +86,7 @@
 
     </script>
 
-<!--Footer-->
+    <!--Footer-->
     <footer>
         <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
         <ul id="social-networks">
