--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
         <div class="text-box">
             <h2>Welcome to</h2>
-            <h1 style="letter-spacing: 1em;" >Skönhetsakuten</h1>
+            <h1 style="letter-spacing: 1em;">Skönhetsakuten</h1>
             <p>Most popular beauty salon in Sweden</p>
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
@@ -55,14 +55,14 @@
         <br>
 
         <!--Pictures-->
-    <div class="pic-container">
-        <img src="assets/images/lashes.jpg" alt="lashes">
-        <img src="assets/images/micro.JPG" alt="microneedling">
-        <img src="assets/images/microblading.JPG" alt="microblading">
-        <img src="assets/images/teeth.JPG" alt="teeth-whitening">
-        <img src="assets/images/salon.jpg" alt="salon">
-        <img src="assets/images/inside.jpg" alt="inside">
-    </div>
+        <div class="pic-container">
+            <img src="assets/images/lashes.jpg" alt="lashes">
+            <img src="assets/images/micro.JPG" alt="microneedling">
+            <img src="assets/images/microblading.JPG" alt="microblading">
+            <img src="assets/images/teeth.JPG" alt="teeth-whitening">
+            <img src="assets/images/salon.jpg" alt="salon">
+            <img src="assets/images/inside.jpg" alt="inside">
+        </div>
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
@@ -77,10 +77,11 @@
 
     </script>
 
+    <!--Footer-->
     <footer>
         <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
         <ul id="social-networks">
-        
+
             <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-instagram"></i></a>
