--- a/treatments.html
+++ b/treatments.html
@@ -47,24 +47,24 @@
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
-                <br>
-            <p>Mix-lashes	700 kr</p>
             <br>
-            <p>Volume lashes	655 kr</p>
+            <p>Mix-lashes 700 kr</p>
             <br>
-            <p>Brown Volume/Mix Lashes	799 kr</p>
+            <p>Volume lashes 655 kr</p>
             <br>
-            <p>Eyebrow plucking	150 kr</p>
+            <p>Brown Volume/Mix Lashes 799 kr</p>
             <br>
-            <p>Hair removal - 5 areas		7000 kr</p>
+            <p>Eyebrow plucking 150 kr</p>
             <br>
-            <p>Hair removal - Brazillian/Hollywood	4000 kr</p>
+            <p>Hair removal - 5 areas 7000 kr</p>
             <br>
-            <p>Hair removal Full body	2999 kr</p>
+            <p>Hair removal - Brazillian/Hollywood 4000 kr</p>
             <br>
-            <p>Teethwhitening	1195 kr</p>
+            <p>Hair removal Full body 2999 kr</p>
             <br>
-            <p>Microblading	3000 kr</p>
+            <p>Teethwhitening 1195 kr</p>
+            <br>
+            <p>Microblading 3000 kr</p>
             <br>
         </div>
 
@@ -81,26 +81,27 @@
 
     </script>
 
-<footer>
-    <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
-    <ul id="social-networks">
-    
-        <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)"><i
-                    class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
-                aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
-        </li>
-        <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
-                aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
-        </li>
-    </ul>
-    <div class="footerBottom">
-        <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+    <!--Footer-->
+    <footer>
+        <h3 class="sub-heading">Follow Us On Social Media For More Content</h3>
+        <ul id="social-networks">
 
-    </div>
-</footer>
+            <li><a href="https://www.instagram.com/skonhetsakuten/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.tiktok.com/@skonhetsakuten" target="_blank" rel="noopener"
+                    aria-label="Visit our TikTok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li><a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" rel="noopener"
+                    aria-label="Visit our Bokadirekt page (opens in a new tab)"><i class="fa-solid fa-b"></i></a>
+            </li>
+        </ul>
+        <div class="footerBottom">
+            <p>Copyright &copy;2023; Designed by Marat Akbar Boyev</p>
+
+        </div>
+    </footer>
 
 </body>
 
