Add a id to 2nd paragraf in about section and make text smaller with border. Set width to 33%

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 the treatment and afterward as well.
                 Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
 
-            <p>Those of you who visit us can feel safe knowing that we are taking recommended measures regarding the
+            <p id="info">Those of you who visit us can feel safe knowing that we are taking recommended measures regarding the
                 coronavirus
                 COVID-19.Our skilled beauty practitioners have over 5 years of experience and hold qualifications in
                 various specialized areas,
