--- a/about.html
+++ b/about.html
@@ -62,11 +62,7 @@
 
             <!--Utube Video-->
             <div class="container">
-                <iframe class="utubevideo-container" style="border: 3px solid rgb(5, 5, 5); border-radius: 50px;"
-                    width="370px" height="480px" src="https://www.youtube.com/embed/JIi88w0VGzM"
-                    title="Lashes by Skönhetsakuten" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwy7LBGqOWU?si=-IZLaPlCEOHnM3Kd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
         </div>
