--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
         <div class="text-box">
             <h2>Welcome to</h2>
-            <h1 style="letter-spacing: 1em;">Skönhetsakuten</h1>
+            <h1 style="letter-spacing: 1em; overflow: hidden;">Skönhetsakuten</h1>
             <p>Most popular beauty salon in Sweden</p>
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
