Change the pictures in the index.html for better looking style

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <!--Pictures-->
         <div class="pic-container">
             <img src="assets/images/lashes.jpg" alt="lashes">
-            <img src="assets/images/micro.JPG" alt="microneedling">
-            <img src="assets/images/microblading.JPG" alt="microblading">
+            <img src="assets/images/boss.jpg" alt="boss">
+            <img src="assets/images/skonhet.jpg" alt="logo">
             <img src="assets/images/teeth.JPG" alt="teeth-whitening">
             <img src="assets/images/salon.jpg" alt="salon">
             <img src="assets/images/inside.jpg" alt="inside">
