--- a/treatments.html
+++ b/treatments.html
@@ -48,6 +48,9 @@
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
             <br>
+            <div>
+
+            </div>
             <p>Mix-lashes 700 kr</p>
             <br>
             <p>Volume lashes 655 kr</p>
