Add more pictures to index.html, add laser and table image

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
         <!--Pictures-->
         <div class="pic-container">
-            <img src="assets/images/lashes.jpg" alt="lashes">
+            <img src="assets/images/laser.jpg" alt="laser">
             <img src="assets/images/boss.jpg" alt="boss">
             <img src="assets/images/skonhet.jpg" alt="logo">
-            <img src="assets/images/teeth.JPG" alt="teeth-whitening">
+            <img src="assets/images/table.jpg" alt="table">
             <img src="assets/images/salon.jpg" alt="salon">
             <img src="assets/images/inside.jpg" alt="inside">
         </div>
